# car_qr_django

./: LICENSE  README.md  pyproject.toml
django_car_service/: manage.py
django_car_service/cars/: admin.py  forms.py  models.py  urls.py  views.py
django_car_service/cars/migrations/: 0001_initial.py  0002_initial.py
django_car_service/django_car_service/: asgi.py  settings.py  urls.py  wsgi.py
django_car_service/pages/: urls.py  views.py
django_car_service/templates/: base.html  cabinet.html  index.html  login.html  register.html  welcome.html
django_car_service/templates/partials/: car_form.html  car_row.html
django_car_service/users/: admin.py  forms.py  models.py  urls.py  views.py
django_car_service/users/migrations/: 0001_initial.py
