[tool.poetry]
name = "cqs-django"
version = "0.1.0"
description = ""
authors = ["Oleksander  Shevchenko <oleksandr.shevchenko@damen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.7"
qrcode = "^8.2"
pillow = "^12.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
